hphp/test/zend/good/ext/intl/tests/uconverter_oop_subst.php.skipif
<?hh
<<__EntryPoint>> function main() {
if( !extension_loaded( 'intl' ) ) print 'skip';
}
